Split source files in src/ and include/ directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required(VERSION 3.1)
 project(Rfm69Avr)
 
 set(SRC
-    Spi.cpp
-    Rfm69.cpp)
+    src/Spi.cpp
+    src/Rfm69.cpp)
 
 add_library(rfm69 ${SRC})
+
+target_include_directories(rfm69
+                           PUBLIC  include/
+                           PRIVATE include/Rfm69/)
 
 set(PUBLIC_FEATURES
     cxx_binary_literals
