Move the UART library to an external repository

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,7 @@
 option(RFM69_BUILD_EXAMPLES "Add examples to the 'all' target" OFF)
 
-add_library(rfm69-examples-common EXCLUDE_FROM_ALL Uart.cpp)
+add_subdirectory(UartStdio/)
+set_target_properties(uart-stdio PROPERTIES EXCLUDE_FROM_ALL ON)
 
 function(add_example name)
     if (NOT RFM69_BUILD_EXAMPLES)
@@ -9,7 +10,7 @@ function(add_example name)
 
     set(TARGET_NAME rfm69-example-${name})
     add_executable(${TARGET_NAME} ${EXE_OPTIONS} ${ARGN})
-    target_link_libraries(${TARGET_NAME} rfm69 rfm69-examples-common)
+    target_link_libraries(${TARGET_NAME} rfm69 uart-stdio)
 endfunction()
 
 add_definitions(-DSENDER_ADDRESS=1 -DRECEIVER_ADDRESS=2)
