Disable examples when RFM69_BUILD_EXAMPLES is off
Before, targets were created for the examples but they were not added to the
'all' target. However, when adding this library to a project, it is (1)
annoying to have these example targets, and (2) potentially problematic that
the examples pull-in the UartStdioAvr library because the main project may also
use that leading to duplicate CMake targets.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,15 +1,9 @@
-option(RFM69_BUILD_EXAMPLES "Add examples to the 'all' target" OFF)
-
 add_subdirectory(UartStdio/)
 set_target_properties(uart-stdio PROPERTIES EXCLUDE_FROM_ALL ON)
 
 function(add_example name)
-    if (NOT RFM69_BUILD_EXAMPLES)
-        set(EXE_OPTIONS EXCLUDE_FROM_ALL)
-    endif ()
-
     set(TARGET_NAME rfm69-example-${name})
-    add_executable(${TARGET_NAME} ${EXE_OPTIONS} ${ARGN})
+    add_executable(${TARGET_NAME} ${ARGN})
     target_link_libraries(${TARGET_NAME} rfm69 uart-stdio)
 endfunction()
 
