Add upload targets for the examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(AvrUpload)
+
 add_subdirectory(UartStdio/)
 set_target_properties(uart-stdio PROPERTIES EXCLUDE_FROM_ALL ON)
 
@@ -5,6 +7,7 @@ function(add_example name)
     set(TARGET_NAME rfm69-example-${name})
     add_executable(${TARGET_NAME} ${ARGN})
     target_link_libraries(${TARGET_NAME} rfm69 uart-stdio)
+    add_upload_target(${TARGET_NAME})
 endfunction()
 
 add_definitions(-DSENDER_ADDRESS=1 -DRECEIVER_ADDRESS=2)
