Force C++17 compilation using -std=c++17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 project(Rfm69Avr)
 
-add_compile_options(-Wall)
+add_compile_options(-Wall -std=c++17)
 
 set(SRC
     src/Spi.cpp
@@ -12,24 +12,6 @@ add_library(rfm69 ${SRC})
 target_include_directories(rfm69
                            PUBLIC  include/
                            PRIVATE include/Rfm69/)
-
-set(PUBLIC_FEATURES
-    cxx_binary_literals
-    cxx_constexpr
-    cxx_static_assert
-    cxx_strong_enums
-    cxx_variable_templates
-    cxx_variadic_macros
-)
-
-set(PRIVATE_FEATURES
-    cxx_auto_type
-    cxx_digit_separators
-)
-
-target_compile_features(rfm69
-                        PUBLIC  ${PUBLIC_FEATURES}
-                        PRIVATE ${PRIVATE_FEATURES})
 
 option(RFM69_BUILD_EXAMPLES "Build examples" OFF)
 
