Move the UartStdio submodule to dependencies/

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples/UartStdio"]
-	path = examples/UartStdio
+	path = dependencies/UartStdio
 	url = https://github.com/JobNoorman/UartStdioAvr.git
